<resources>
	<string name="app_name">TodoList</string>
	<string name="name">Titel</string>
	<string name="description">Beschreibung</string>
	<string name="date">Fälligkeit</string>
	<string name="time">Zeit</string>
	<string name="done">Erledigt</string>
	<string name="favorite">Als wichtig markieren</string>
	<string name="deleteButton">Eintrag Löschen</string>
	<string name="sortByDate">Sortieren nach Datum</string>
	<string name="sortByFavorite">Sortieren nach Wichtigkeit</string>
	<string name="title_activity_login">Einloggen</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
	<string name="contacts">Kontakte</string>
	<string name="contact">Kontakt</string>
	<string name="deleted">entfernt.</string>
	<string name="deleteLocal">Lösche lokal</string>
	<string name="deleteRemote">Lösche remote</string>
	<string name="synchronize">Synchronisiere</string>
	<string name="deleteItem">Eintrag löschen</string>
	<string name="setItem">Item mit Name </string>
	<string name="setDone"> als erledigt markiert.</string>
	<string name="setUndone"> als offen markiert.</string>
	<string name="setFavorite"> als wichtig markiert.</string>
	<string name="setNotFavorite"> als nicht wichtig markiert.</string>
	<string name="itemDeleted">Item gelöscht.</string>
	<string name="localItemsDeleted">Alle lokalen Items gelöscht.</string>
	<string name="remoteItemsDeleted">Alle remote Items gelöscht.</string>
	<string name="synchronizedRemote">Remote Items synchronisiert.</string>
	<string name="synchronizedLocal">Lokale Items synchronisiert.</string>
	<string name="serverNotAccessible">Server nicht erreichbar. Lokale CRUD Implementierung wird genutzt.</string>
	<string name="serverAccessible">Server erreichbar. Remote CRUD Implementierung wird genutzt.</string>
	<string name="sendMail">Mail wurde erfolgreich an .</string>
	<string name="sendSMS">SMS wurde erfolgreich an </string>
	<string name="sendSuccessfully"> gesendet.</string>
	
	<!-- Strings related to login -->
	<string name="prompt_email">E-Mail</string>
	<string name="prompt_password">Passwort</string>
	<string name="action_sign_in">Einloggen</string>
	<string name="action_sign_in_short">Einloggen</string>
	<string name="error_invalid_email">Die E-Mail-Adresse ist ungültig</string>
	<string name="error_invalid_password">Das Passwort ist zu kurz oder enthält ungültige Zeichen.</string>
	<string name="error_incorrect_password">Das Passwort ist falsch.</string>
	<string name="error_field_required">Dies ist ein Pflichtfeld</string>
	<string name="sureDeleteItem">Sind Sie sicher, dass Sie den Eintrag löschen möchten?</string>
</resources>
